--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "start:local": "yarn build:frontend && node index.js"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "deta": "^1.0.1",
     "express": "^4.17.2",
     "nanoid": "^3.2.0",
