--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,7 +8,12 @@
     "dev": "vite"
   },
   "dependencies": {
+    "bootstrap": "^5.1.3",
     "copy-to-clipboard": "^3.3.1",
     "vite": "^2.7.13"
+  },
+  "devDependencies": {
+    "@fullhuman/postcss-purgecss": "^4.1.3",
+    "vite-plugin-html": "^3.0.3"
   }
 }
